--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 body{
     color:black;
     background: #eee;
-    padding-top: 100px;
+    padding-top: 60px;
     
 }
 
@@ -32,6 +32,7 @@ form{
 
 form,input,button{
     padding: 10px;
+    overflow: hidden;
 }
 .ingredients{
     width: 66%;
@@ -42,6 +43,7 @@ form,input,button{
     top:0;
     right:0;
     display: inline;
+    padding: 10px;
 }
 .container{
     margin:auto;
@@ -74,17 +76,37 @@ header{
 /*li:nth-child(even){
     background: skyblue; 
 }*/
-iframe{
-    height:0px;
-    width:0px;
-    transition:all .4s;
-}
 
-iframe.show{
-    height:400px;
-    width:100%;
+.iframe_window{
+    position: fixed;
+    width:100vw;
+    height:100vw;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    bottom: 0;
+    background:rgba(0,0,0,0.22);
+    opacity: 0;
+    pointer-events: none;
 }
+.iframe_window.show{
+    pointer-events: initial;
+    z-index: 100;
+    opacity: 1;
+}
+.iframe_exit{
+    position: absolute;
+    z-index: 10000;
+    top: 108px;
+    right: 10px;
+    /* filter: invert(1); */
+    width: 100px;
+    height: 100px;
+    font-size: 80px;
 
+}
 .recipe {
     background: #fff;
     border-radius: 2px;
@@ -105,6 +127,26 @@ iframe.show{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
 
+  ul{
+      padding: 10px;
+  }
+
+  .instructions{
+      padding: 10px;
+      transition: all 1.25s;
+      font-size: 60px;
+      text-align: justify;
+      margin: 50px;
+  }
+  .instructions.shrink{
+      font-size: 20px;
+      
+  }
+
+  h1{
+      padding: 10px;
+  }
+
   @media screen and (max-width: 915px) {
     .recipe {
         width:100%;
@@ -117,7 +159,41 @@ iframe.show{
 
 iframe{
     position: fixed;
-    width:100%;
-    height:100%;
+    width:80vw;
+    height:80vw;
     z-index: 1000;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    bottom: 0;
+    background: white;
 }
+
+.appendMovingDots:after {
+    content: ' .';
+    animation: dots 3s steps(1, end) infinite;
+}
+@keyframes dots {
+    0%, 12.5% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    37.5% {
+        text-shadow: .5em 0;
+    }
+    50% {
+        text-shadow: .5em 0, 1em 0;
+    }
+    62.5% {
+        text-shadow: .5em 0, 1em 0, 1.5em 0;
+    }
+    75% {
+        text-shadow: .5em 0, 1em 0, 1.5em 0, 2em 0;
+    }
+    87.5%, 100%{
+        text-shadow: .5em 0, 1em 0, 1.5em 0, 2em 0, 2.5em;
+    }
+}	
